--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-MONGODB_URI=""
+MONGODB_URI="mongodb+srv://shubhampoddar83:S1gNZbDLpboagh7l@cluster0.liyykds.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+SECRET_KEY="a-string-secret-at-least-256-bits-long"
